--- a/settings.json
+++ b/settings.json
@@ -5,7 +5,7 @@
   "admin_enabled": true,
   "admin_username": "admin",
   "admin_password": "admin",
-  "genieacs_url": "192.168.8.89:7557",
+  "genieacs_url": "http://192.168.8.89:7557",
   "genieacs_username": "acs",
   "genieacs_password": "060111",
   "mikrotik_host": "192.168.8.1",
@@ -15,16 +15,23 @@
   "main_interface": "ether1-ISP",
   "pppoe_monitor_enable": true,
   "technician_numbers": [
-    "083807665697,082218094778"
+    "083807665697",
+    "082218094778"
   ],
   "technician_group_id": "120363029715729275@g.us",
   "whatsapp_session_path": "./whatsapp-session",
   "whatsapp_keep_alive": true,
   "whatsapp_restart_on_error": true,
   "pppoe_monitor_interval": 60000,
-  "rx_power_warning": -25,
-  "rx_power_critical": -27,
+  "rx_power_warning": -27,
+  "rx_power_critical": -30,
+  "rx_power_notification_enable": false,
+  "rx_power_notification_interval": 300000,
   "company_header": "ALIJAYA BOT MANAGEMENT ISP",
   "footer_info": "Internet Tanpa Batas",
-  "customerPortalOtp": false
+  "customerPortalOtp": true,
+  "otp_length": 4,
+  "otp_expiry_minutes": 5,
+  "server_port": 4555,
+  "server_host": "localhost"
 }
